--- a/albionboxes/prod_jz_bed_sensor.yaml
+++ b/albionboxes/prod_jz_bed_sensor.yaml
@@ -24,6 +24,7 @@ packages:
   uptime: !include common/uptime.yaml
   wifi_signal_sensor: !include common/wifi_signal_sensor.yaml
   status_sensor: !include common/status_sensor.yaml
+  dashboard_import: !include common/default_dashboard_import.yaml
   # Issues with internal_temp on this chip
 #  internal_temp: !include common/internal_temp.yaml
 
