--- a/albionboxes/prod_full_bath_smell_sensor.yaml
+++ b/albionboxes/prod_full_bath_smell_sensor.yaml
@@ -18,6 +18,7 @@ packages:
   wifi_signal_sensor: !include common/wifi_signal_sensor.yaml
   tvoc_sensor: !include common/tvoc_sensor.yaml
   status_sensor: !include common/status_sensor.yaml
+  dashboard_import: !include common/default_dashboard_import.yaml
   # Issues with internal_temp on this chip
 #  internal_temp: !include common/internal_temp.yaml
 
