--- a/albionboxes/prod_full_bath_window_env_sensor.yaml
+++ b/albionboxes/prod_full_bath_window_env_sensor.yaml
@@ -19,6 +19,7 @@ packages:
   status_sensor: !include common/status_sensor.yaml
   env_pro_sensor: !include common/env_pro_sensor.yaml
   internal_temp: !include common/internal_temp.yaml
+  dashboard_import: !include common/default_dashboard_import.yaml
 
 # env sensors
 
