--- a/albionboxes/prod_jz_desk_temp_sensor.yaml
+++ b/albionboxes/prod_jz_desk_temp_sensor.yaml
@@ -26,6 +26,7 @@ packages:
   wifi_signal_sensor: !include common/wifi_signal_sensor.yaml
   status_sensor: !include common/status_sensor.yaml
   internal_temp: !include common/internal_temp.yaml
+  dashboard_import: !include common/default_dashboard_import.yaml
 
 # temp sensors
 
