--- a/albionboxes/common/default_dashboard_import.yaml
+++ b/albionboxes/common/default_dashboard_import.yaml
@@ -2,5 +2,6 @@
 # This should point to the public location of this yaml file.
 # Example: github://esphome/esphome-project-template/project-template-esp32.yaml@v6
 dashboard_import:
-  package_import_url: ${github_package_import_url}
+  # FIXME: make dynamic with version and/or full path
+  package_import_url: "github://jzucker2/albionboxes/albionboxes/${box_config_file_name}.yaml@v0.2.0"
   import_full_config: false # or true
