--- a/albionboxes/prod_dan_desk_temp_sensor.yaml
+++ b/albionboxes/prod_dan_desk_temp_sensor.yaml
@@ -4,6 +4,7 @@ substitutions:
   friendly_name: Dan Desk Temp Sensor
   area: Dan Room
   comment: "Temperature sensors for inside Dan's desk"
+  box_config_file_name: prod_albion_jukebox_plug
   zeroth_sensor_name: "Dan Desk Tech Cabinet Modem Router Shelf"
   first_sensor_name: "Dan Desk Tech Cabinet UPS Shelf"
   oversampling_value: "16x"
