--- a/albionboxes/prod_full_bath_smell_sensor.yaml
+++ b/albionboxes/prod_full_bath_smell_sensor.yaml
@@ -3,6 +3,7 @@ substitutions:
   friendly_name: Full Bath Smell Sensor
   area: Full Bath
   comment: "This is intended to catch bad smells in the full bath"
+  box_config_file_name: prod_albion_jukebox_plug
 
 packages:
   esphome: !include common/default_esphome.yaml
