--- a/albionboxes/prod_living_room_volume_dial.yaml
+++ b/albionboxes/prod_living_room_volume_dial.yaml
@@ -3,6 +3,7 @@ substitutions:
   friendly_name: Living Room Volume Dial
   area: Living Room
   comment: "Volume rotary controller for the Living Room"
+  box_config_file_name: prod_albion_jukebox_plug
   display_rotation: '180'
   receiver_zone_media_player_entity: "media_player.denon_avr_x4300h_main_zone_living_room"
 
