--- a/albionboxes/prod_soldering_station_buttons.yaml
+++ b/albionboxes/prod_soldering_station_buttons.yaml
@@ -3,6 +3,7 @@ substitutions:
   friendly_name: Soldering Station Buttons
   area: Dev
   comment: "Not permanently connected"
+  box_config_file_name: prod_albion_jukebox_plug
 
 packages:
   esphome: !include common/default_esphome.yaml
