--- a/albionboxes/prod_alert_reset_button.yaml
+++ b/albionboxes/prod_alert_reset_button.yaml
@@ -3,7 +3,7 @@ substitutions:
   friendly_name: Alert Reset Button
   area: Pantry
   comment: "I might get rid of this soon"
-  box_config_file_name: prod_albion_jukebox_plug
+  box_config_file_name: prod_alert_reset_button
 
 packages:
   esphome: !include common/default_esphome.yaml
