--- a/albionboxes/prod_jzbedroom_bt_proxy.yaml
+++ b/albionboxes/prod_jzbedroom_bt_proxy.yaml
@@ -3,7 +3,7 @@ substitutions:
   friendly_name: JZ Bedroom Bluetooth Proxy
   area: JZ Bedroom
   comment: "This is a decent iteration"
-  box_config_file_name: prod_albion_jukebox_plug
+  box_config_file_name: prod_jzbedroom_bt_proxy
 
 packages:
   esphome: !include common/bt_proxy_esphome.yaml
