--- a/albionboxes/prod_kitchen_bt_proxy.yaml
+++ b/albionboxes/prod_kitchen_bt_proxy.yaml
@@ -3,7 +3,7 @@ substitutions:
   friendly_name: Kitchen Bluetooth Proxy
   area: Kitchen
   comment: "This is a decent iteration"
-  box_config_file_name: prod_albion_jukebox_plug
+  box_config_file_name: prod_kitchen_bt_proxy
 
 packages:
   esphome: !include common/bt_proxy_esphome.yaml
