And that might simplify things a bit

--- a/albionboxes/common/atom_echo_esphome.yaml
+++ b/albionboxes/common/atom_echo_esphome.yaml
@@ -5,9 +5,11 @@ esphome:
   area: ${area}
   comment: ${comment}
   # https://esphome.io/components/esphome#project-information
-  project:
-    name: "jordan.albionboxes"
-    # FIXME: make an env var to be shared
-    version: "0.2.0"
-#    name: m5stack.atom-echo
-#    version: "1.0"
+  project: !include default_project.yaml
+#  project:
+#    name: "jordan.albionboxes"
+#    # FIXME: make an env var to be shared
+#    version: "0.2.0"
+##    version: "${albionboxes_version}"
+##    name: m5stack.atom-echo
+##    version: "1.0"
