--- a/albionboxes/common/albion_v3_volume_dial.yaml
+++ b/albionboxes/common/albion_v3_volume_dial.yaml
@@ -25,10 +25,12 @@ esphome:
 #  friendly_name: ${friendly_name}
   area: ${area}
   comment: ${comment}
-  project:
-    name: "jordan.albionboxes"
-    # FIXME: make an env var to be shared
-    version: "0.2.0"
+  project: !include default_project.yaml
+#  project:
+#    name: "jordan.albionboxes"
+#    # FIXME: make an env var to be shared
+#    version: "0.2.0"
+##    version: "${albionboxes_version}"
   on_boot:
     then:
       - light.turn_on: backlight
