--- a/albionboxes/common/default_project.yaml
+++ b/albionboxes/common/default_project.yaml
@@ -3,6 +3,4 @@ name: "jordan.albionboxes"
 # FIXME: make an env var to be shared
 # This should be tag or branch name most likely
 # https://esphome.io/guides/configuration-types#substitute-include-variables
-#albionboxes_version: "continuing-basic-b-mvp"
-version: "continuing-basic-b-mvp"
-#    version: "${albionboxes_version}"
+version: "0.3.0"
