--- a/albionboxes/common/default_dashboard_import.yaml
+++ b/albionboxes/common/default_dashboard_import.yaml
@@ -3,5 +3,6 @@
 # Example: github://esphome/esphome-project-template/project-template-esp32.yaml@v6
 dashboard_import:
   # FIXME: make dynamic with version and/or full path
+  # This should be tag or branch name most likely
   package_import_url: "github://jzucker2/albionboxes/albionboxes/${box_config_file_name}.yaml@fully-convert-all-albion-devices"
   import_full_config: true # or true
