--- a/albionboxes/prod_full_bath_shower_speakerz_buttons.yaml
+++ b/albionboxes/prod_full_bath_shower_speakerz_buttons.yaml
@@ -4,6 +4,7 @@ substitutions:
   area: Full Bath
   comment: "For controlling the ShowerSpeakerz and bluetooth music"
   box_config_file_name: prod_full_bath_shower_speakerz_buttons
+  rufus_url: !secret rufus_url
 
 packages:
   esphome: !include common/default_esphome.yaml
@@ -22,10 +23,10 @@ packages:
   # Issues with internal_temp on this chip
 #  internal_temp: !include common/internal_temp.yaml
 
-# http://10.0.1.104:5000/api/v1/activities/kitchen-lights-on
-# http://10.0.1.104:5000/api/v1/activities/kitchen-lights-off
-# http://10.0.1.104:5000/api/v1/activities/full-bath-music-lights
-# http://10.0.1.104:5000/api/v1/activities/full-bath-music-lights-off
+# ${rufus_url}/api/v1/activities/kitchen-lights-on
+# ${rufus_url}/api/v1/activities/kitchen-lights-off
+# ${rufus_url}/api/v1/activities/full-bath-music-lights
+# ${rufus_url}/api/v1/activities/full-bath-music-lights-off
 
 ## Device-specific
 
@@ -51,7 +52,7 @@ binary_sensor:
         - logger.log: "Red Button Clicked"
         - logger.log: "Turn off full bath music lights request"
         - http_request.get:
-            url: http://10.0.1.104:5000/api/v1/activities/full-bath-music-lights-off
+            url: ${rufus_url}/api/v1/activities/full-bath-music-lights-off
             headers:
               Content-Type: application/json
             verify_ssl: false
@@ -73,7 +74,7 @@ binary_sensor:
         - logger.log: "Blue Button Clicked"
         - logger.log: "Turn on full bath music lights request"
         - http_request.get:
-            url: http://10.0.1.104:5000/api/v1/activities/full-bath-music-lights
+            url: ${rufus_url}/api/v1/activities/full-bath-music-lights
             headers:
               Content-Type: application/json
             verify_ssl: false
