Last big changeover I think

--- a/albionboxes/prod_pantry_rf_transmitter.yaml
+++ b/albionboxes/prod_pantry_rf_transmitter.yaml
@@ -28,6 +28,7 @@ packages:
   status_sensor: !include common/status_sensor.yaml
   internal_temp: !include common/internal_temp.yaml
   dashboard_import: !include common/default_dashboard_import.yaml
+  albion_boxes_info: !include common/albionboxes_info.yaml
 
 ## Device-specific
 # https://esphome.io/components/remote_transmitter.html#remote-setting-up-rf
