--- a/albionboxes/prod_dan_desk_temp_sensor.yaml
+++ b/albionboxes/prod_dan_desk_temp_sensor.yaml
@@ -27,6 +27,7 @@ packages:
   status_sensor: !include common/status_sensor.yaml
   internal_temp: !include common/internal_temp.yaml
   dashboard_import: !include common/default_dashboard_import.yaml
+  albion_boxes_info: !include common/albionboxes_info.yaml
 
 # temp sensors
 
