--- a/albionboxes/prod_full_bath_env_sensor.yaml
+++ b/albionboxes/prod_full_bath_env_sensor.yaml
@@ -21,6 +21,7 @@ packages:
   env_pro_sensor: !include common/env_pro_sensor.yaml
   internal_temp: !include common/internal_temp.yaml
   dashboard_import: !include common/default_dashboard_import.yaml
+  albion_boxes_info: !include common/albionboxes_info.yaml
 
 # env sensors
 
