--- a/albionboxes/prod_gaggiatimer.yaml
+++ b/albionboxes/prod_gaggiatimer.yaml
@@ -33,6 +33,7 @@ packages:
   status_sensor: !include common/status_sensor.yaml
   internal_temp: !include common/internal_temp.yaml
   dashboard_import: !include common/default_dashboard_import.yaml
+  albion_boxes_info: !include common/albionboxes_info.yaml
 #  microphone: !include common/microphone.yaml
 
 ## Device-specific
