--- a/albionboxes/prod_kitchen_volume_dial.yaml
+++ b/albionboxes/prod_kitchen_volume_dial.yaml
@@ -22,3 +22,4 @@ packages:
 #  internal_temp: !include common/internal_temp.yaml
   albion_volume_dial: !include common/albion_v2_volume_dial.yaml
   dashboard_import: !include common/default_dashboard_import.yaml
+  albion_boxes_info: !include common/albionboxes_info.yaml
