--- a/albionboxes/prod_oven_gas_sensor.yaml
+++ b/albionboxes/prod_oven_gas_sensor.yaml
@@ -20,6 +20,7 @@ packages:
   tvoc_sensor: !include common/tvoc_sensor.yaml
   status_sensor: !include common/status_sensor.yaml
   dashboard_import: !include common/default_dashboard_import.yaml
+  albion_boxes_info: !include common/albionboxes_info.yaml
   # Issues with internal_temp on this chip
 #  internal_temp: !include common/internal_temp.yaml
 
