--- a/albionboxes/prod_living_room_cabinet_temp_sensor.yaml
+++ b/albionboxes/prod_living_room_cabinet_temp_sensor.yaml
@@ -6,12 +6,12 @@ substitutions:
   area: Living Room
   comment: "Temperature sensors for inside the food and snack cabinet in the Living Room"
   box_config_file_name: prod_living_room_cabinet_temp_sensor
-  zeroth_sensor_name: "Living Room Food Cabinet Receiver Shelf"
-  first_sensor_name: "Living Room Food Cabinet UPS Shelf"
-  second_sensor_name: "Living Room Food Cabinet NAS Shelf"
-  third_sensor_name: "Living Room Food Cabinet NUC Shelf"
-  fourth_sensor_name: "Living Room Food Cabinet PS5 Shelf"
-  fifth_sensor_name: "Living Room Food Cabinet RPi Shelf"
+  zeroth_sensor_name: "Living Room Food Cabinet Chocolate Shelf"
+  first_sensor_name: "Living Room Food Cabinet Snacks Shelf"
+  second_sensor_name: "Living Room Food Cabinet Weed Shelf"
+#  third_sensor_name: "Living Room Food Cabinet NUC Shelf"
+#  fourth_sensor_name: "Living Room Food Cabinet PS5 Shelf"
+#  fifth_sensor_name: "Living Room Food Cabinet RPi Shelf"
   oversampling_value: "16x"
   update_interval_value: "60s"
   sht_address: "0x44"
@@ -56,11 +56,11 @@ tca9548a:
       - bus_id: multiplex0channel2
         channel: 2
       - bus_id: multiplex0channel3
-        channel: 3
-      - bus_id: multiplex0channel4
-        channel: 4
-      - bus_id: multiplex0channel5
-        channel: 5
+#        channel: 3
+#      - bus_id: multiplex0channel4
+#        channel: 4
+#      - bus_id: multiplex0channel5
+#        channel: 5
 
 sensor:
   # https://esphome.io/components/sensor/sht4x.html
@@ -117,60 +117,60 @@ sensor:
       name: "${second_sensor_name} Outside Pressure"
     address: ${bmp_address}
     update_interval: ${update_interval_value}
-  # https://esphome.io/components/sensor/sht4x.html
-  - platform: sht4x
-    i2c_id: multiplex0channel3
-    address: ${sht_address}
-    temperature:
-      name: "${third_sensor_name} Temperature"
-    humidity:
-      name: "${third_sensor_name} Relative Humidity"
-  # https://esphome.io/components/sensor/bmp280.html
-  - platform: bmp280
-    i2c_id: multiplex0channel3
-    temperature:
-      name: "${third_sensor_name} Outside Temperature"
-      oversampling: ${oversampling_value}
-    pressure:
-      name: "${third_sensor_name} Outside Pressure"
-    address: ${bmp_address}
-    update_interval: ${update_interval_value}
-  # https://esphome.io/components/sensor/sht4x.html
-  - platform: sht4x
-    i2c_id: multiplex0channel4
-    address: ${sht_address}
-    temperature:
-      name: "${fourth_sensor_name} Temperature"
-    humidity:
-      name: "${fourth_sensor_name} Relative Humidity"
-  # https://esphome.io/components/sensor/bmp280.html
-  - platform: bmp280
-    i2c_id: multiplex0channel4
-    temperature:
-      name: "${fourth_sensor_name} Outside Temperature"
-      oversampling: ${oversampling_value}
-    pressure:
-      name: "${fourth_sensor_name} Outside Pressure"
-    address: ${bmp_address}
-    update_interval: ${update_interval_value}
-  # https://esphome.io/components/sensor/sht4x.html
-  - platform: sht4x
-    i2c_id: multiplex0channel5
-    address: ${sht_address}
-    temperature:
-      name: "${fifth_sensor_name} Temperature"
-    humidity:
-      name: "${fifth_sensor_name} Relative Humidity"
-  # https://esphome.io/components/sensor/bmp280.html
-  - platform: bmp280
-    i2c_id: multiplex0channel5
-    temperature:
-      name: "${fifth_sensor_name} Outside Temperature"
-      oversampling: ${oversampling_value}
-    pressure:
-      name: "${fifth_sensor_name} Outside Pressure"
-    address: ${bmp_address}
-    update_interval: ${update_interval_value}
+#  # https://esphome.io/components/sensor/sht4x.html
+#  - platform: sht4x
+#    i2c_id: multiplex0channel3
+#    address: ${sht_address}
+#    temperature:
+#      name: "${third_sensor_name} Temperature"
+#    humidity:
+#      name: "${third_sensor_name} Relative Humidity"
+#  # https://esphome.io/components/sensor/bmp280.html
+#  - platform: bmp280
+#    i2c_id: multiplex0channel3
+#    temperature:
+#      name: "${third_sensor_name} Outside Temperature"
+#      oversampling: ${oversampling_value}
+#    pressure:
+#      name: "${third_sensor_name} Outside Pressure"
+#    address: ${bmp_address}
+#    update_interval: ${update_interval_value}
+#  # https://esphome.io/components/sensor/sht4x.html
+#  - platform: sht4x
+#    i2c_id: multiplex0channel4
+#    address: ${sht_address}
+#    temperature:
+#      name: "${fourth_sensor_name} Temperature"
+#    humidity:
+#      name: "${fourth_sensor_name} Relative Humidity"
+#  # https://esphome.io/components/sensor/bmp280.html
+#  - platform: bmp280
+#    i2c_id: multiplex0channel4
+#    temperature:
+#      name: "${fourth_sensor_name} Outside Temperature"
+#      oversampling: ${oversampling_value}
+#    pressure:
+#      name: "${fourth_sensor_name} Outside Pressure"
+#    address: ${bmp_address}
+#    update_interval: ${update_interval_value}
+#  # https://esphome.io/components/sensor/sht4x.html
+#  - platform: sht4x
+#    i2c_id: multiplex0channel5
+#    address: ${sht_address}
+#    temperature:
+#      name: "${fifth_sensor_name} Temperature"
+#    humidity:
+#      name: "${fifth_sensor_name} Relative Humidity"
+#  # https://esphome.io/components/sensor/bmp280.html
+#  - platform: bmp280
+#    i2c_id: multiplex0channel5
+#    temperature:
+#      name: "${fifth_sensor_name} Outside Temperature"
+#      oversampling: ${oversampling_value}
+#    pressure:
+#      name: "${fifth_sensor_name} Outside Pressure"
+#    address: ${bmp_address}
+#    update_interval: ${update_interval_value}
 
 ## Device-specific
 
