--- a/albionboxes/common/atom_light.yaml
+++ b/albionboxes/common/atom_light.yaml
@@ -1,9 +1,10 @@
 light:
-  - platform: neopixelbus
-    type: GRB
-    variant: SK6812
+  - platform: esp32_rmt_led_strip
+    rgb_order: GRB
+    chipset: SK6812
     pin: 27
     num_leds: 1
+    rmt_channel: 0
     id: status_led
     name: "${friendly_name} Light"
     effects:
