--- a/albionboxes/common/m5atoms3lite_device.yaml
+++ b/albionboxes/common/m5atoms3lite_device.yaml
@@ -3,6 +3,8 @@ esp32:
   variant: esp32s3
   framework:
     type: arduino
+    # fix for internal temp (version is currently at 2.0.5)
+    version: 2.0.7
 
 # Enable logging
 # https://hutscape.com/tutorials/hello-esphome-esp32s3
