And that's an improvement

--- a/albionboxes/prod_reading_button.yaml
+++ b/albionboxes/prod_reading_button.yaml
@@ -22,7 +22,7 @@ packages:
   dashboard_import: !include common/default_dashboard_import.yaml
   albion_boxes_info: !include common/albionboxes_info.yaml
   # Issues with internal_temp on this chip
-#  internal_temp: !include common/internal_temp.yaml
+  internal_temp: !include common/internal_temp.yaml
 
 # ${rufus_url}/api/v1/activities/special-wfh
 
