--- a/albionboxes/prod_jz_bed_sensor.yaml
+++ b/albionboxes/prod_jz_bed_sensor.yaml
@@ -27,8 +27,7 @@ packages:
   status_sensor: !include common/status_sensor.yaml
   dashboard_import: !include common/default_dashboard_import.yaml
   albion_boxes_info: !include common/albionboxes_info.yaml
-  # Issues with internal_temp on this chip
-#  internal_temp: !include common/internal_temp.yaml
+  internal_temp: !include common/internal_temp.yaml
 
 # https://www.homeautomationguy.io/blog/making-my-own-bed-sensor
 binary_sensor:
