--- a/albionboxes/prod_oven_gas_sensor.yaml
+++ b/albionboxes/prod_oven_gas_sensor.yaml
@@ -21,8 +21,7 @@ packages:
   status_sensor: !include common/status_sensor.yaml
   dashboard_import: !include common/default_dashboard_import.yaml
   albion_boxes_info: !include common/albionboxes_info.yaml
-  # Issues with internal_temp on this chip
-#  internal_temp: !include common/internal_temp.yaml
+  internal_temp: !include common/internal_temp.yaml
 
 # env sensors
 
