--- a/albionboxes/common/atom_light.yaml
+++ b/albionboxes/common/atom_light.yaml
@@ -2,11 +2,11 @@ light:
   - platform: esp32_rmt_led_strip
     rgb_order: GRB
     chipset: SK6812
-    pin: 27
+    pin: ${light_pin}
     num_leds: 1
     rmt_channel: 0
-    id: status_led
-    name: "${friendly_name} Light"
+    id: atom_light
+    name: "${friendly_name} Atom Light"
     effects:
       - random:
       - flicker:
