--- a/albionboxes/common/og_atom_light.yaml
+++ b/albionboxes/common/og_atom_light.yaml
@@ -6,7 +6,7 @@ light:
     restore_mode: ALWAYS_OFF
     num_leds: 1
     rgb_order: GRB
-    id: status_led
+    id: atom_light
     name: "${friendly_name} Light"
     effects:
       - random:
