--- a/albionboxes/prod_full_bath_smell_sensor.yaml
+++ b/albionboxes/prod_full_bath_smell_sensor.yaml
@@ -9,7 +9,7 @@ packages:
   esphome: !include common/default_esphome.yaml
   wifi: !include common/wifi.yaml
   esp32: !include common/m5atoms3lite_device.yaml
-  light: !include common/s3_light.yaml
+  light: !include { file: common/atom_light.yaml, vars: { light_pin: 35 } }
   reset_button: !include common/reset_button.yaml
   networking: !include common/networking.yaml
   http: !include common/http.yaml
