--- a/albionboxes/prod_hallway_bedroom_fan_switches.yaml
+++ b/albionboxes/prod_hallway_bedroom_fan_switches.yaml
@@ -11,7 +11,7 @@ packages:
   esphome: !include common/default_esphome.yaml
   wifi: !include common/wifi.yaml
   esp32: !include common/m5atom_device.yaml
-  light: !include common/atom_light.yaml
+  light: !include { file: common/atom_light.yaml, vars: { light_pin: 27 } }
   reset_button: !include common/reset_button.yaml
   networking: !include common/networking.yaml
   http: !include common/http.yaml
