--- a/albionboxes/prod_soldering_station_buttons.yaml
+++ b/albionboxes/prod_soldering_station_buttons.yaml
@@ -13,7 +13,7 @@ packages:
   reset_button: !include common/reset_button.yaml
   networking: !include common/networking.yaml
   http: !include common/http.yaml
-  light: !include common/s3_light.yaml
+  light: !include { file: common/atom_light.yaml, vars: { light_pin: 35 } }
   version: !include common/version.yaml
   wifi_info: !include common/wifi_info.yaml
   uptime: !include common/uptime.yaml
@@ -40,8 +40,8 @@ binary_sensor:
     on_press:
       then:
         - logger.log: "Self Button Clicked (maybe turn on lights in dining room?)"
-        - logger.log: "Toggle status_led"
-        - light.toggle: status_led
+        - logger.log: "Toggle atom_light"
+        - light.toggle: atom_light
         - logger.log: "Done with self button clicked!"
   - platform: gpio
     pin:
