--- a/albionboxes/prod_full_bath_shower_speakerz_buttons.yaml
+++ b/albionboxes/prod_full_bath_shower_speakerz_buttons.yaml
@@ -22,6 +22,7 @@ packages:
   dashboard_import: !include common/default_dashboard_import.yaml
   albion_boxes_info: !include common/albionboxes_info.yaml
   internal_temp: !include common/internal_temp.yaml
+  button: !include { file: common/default_atom_button.yaml, vars: { button_pin: 41 } }
 
 # ${rufus_url}/api/v1/activities/kitchen-lights-on
 # ${rufus_url}/api/v1/activities/kitchen-lights-off
@@ -31,17 +32,6 @@ packages:
 ## Device-specific
 
 binary_sensor:
-  - platform: gpio
-    pin:
-      number: 41
-      inverted: true
-    name: "${friendly_name} Main Button"
-    on_press:
-      then:
-        - logger.log: "Self Button Clicked"
-        - logger.log: "Toggle atom_light"
-        - light.toggle: atom_light
-        - logger.log: "Done with self button clicked!"
   - platform: gpio
     pin:
       number: 2
