--- a/albionboxes/common/atom_light.yaml
+++ b/albionboxes/common/atom_light.yaml
@@ -1,3 +1,4 @@
+# https://esphome.io/components/light/index.html
 light:
   - platform: esp32_rmt_led_strip
     rgb_order: GRB
@@ -6,6 +7,7 @@ light:
     num_leds: 1
     rmt_channel: 0
     id: atom_light
+    restore_mode: RESTORE_DEFAULT_OFF
     name: "${friendly_name} Atom Light"
     effects:
       - random:
