--- a/albionboxes/prod_albion_jukebox_plug.yaml
+++ b/albionboxes/prod_albion_jukebox_plug.yaml
@@ -27,6 +27,7 @@ packages:
   internal_temp: !include common/internal_temp.yaml
   dashboard_import: !include common/default_dashboard_import.yaml
   albion_boxes_info: !include common/albionboxes_info.yaml
+  button: !include { file: common/default_atom_button.yaml, vars: { button_pin: 39 } }
 
 ## Device-specific
 
@@ -41,14 +42,3 @@ switch:
   - platform: gpio
     name: "${friendly_name} Plug Relay"
     pin: ${relay_pin}
-
-binary_sensor:
-  - platform: gpio
-    pin:
-      number: 39
-      inverted: true
-    name: "${friendly_name} Button"
-    on_release:
-      then:
-        - logger.log: "Button tapped"
-        - logger.log: "Done with button tapped!"
