--- a/albionboxes/prod_diningroom_bt_proxy.yaml
+++ b/albionboxes/prod_diningroom_bt_proxy.yaml
@@ -12,7 +12,7 @@ packages:
   light: !include { file: common/atom_light.yaml, vars: { light_pin: 27 } }
   reset_button: !include common/reset_button.yaml
   networking: !include common/networking.yaml
-#  http: !include common/http.yaml
+  http: !include common/http.yaml
   bluetooth_proxy: !include common/bluetooth_proxy.yaml
   version: !include common/version.yaml
   wifi_info: !include common/wifi_info.yaml
@@ -22,3 +22,4 @@ packages:
   internal_temp: !include common/internal_temp.yaml
   dashboard_import: !include common/default_dashboard_import.yaml
   albion_boxes_info: !include common/albionboxes_info.yaml
+  button: !include { file: common/default_atom_button.yaml, vars: { button_pin: 39 } }
