--- a/albionboxes/prod_halfbath_bt_proxy.yaml
+++ b/albionboxes/prod_halfbath_bt_proxy.yaml
@@ -22,3 +22,4 @@ packages:
   internal_temp: !include common/internal_temp.yaml
   dashboard_import: !include common/default_dashboard_import.yaml
   albion_boxes_info: !include common/albionboxes_info.yaml
+  button: !include { file: common/default_atom_button.yaml, vars: { button_pin: 39 } }
