--- a/albionboxes/prod_jz_bed_sensor.yaml
+++ b/albionboxes/prod_jz_bed_sensor.yaml
@@ -28,6 +28,7 @@ packages:
   dashboard_import: !include common/default_dashboard_import.yaml
   albion_boxes_info: !include common/albionboxes_info.yaml
   internal_temp: !include common/internal_temp.yaml
+  button: !include { file: common/default_atom_button.yaml, vars: { button_pin: 41 } }
 
 # https://www.homeautomationguy.io/blog/making-my-own-bed-sensor
 binary_sensor:
