--- a/albionboxes/common/atom_light_v2.yaml
+++ b/albionboxes/common/atom_light_v2.yaml
@@ -1,14 +1,15 @@
 # https://esphome.io/components/light/index.html
-# https://esphome.io/components/light/neopixelbus.html
+# https://esphome.io/components/light/esp32_rmt_led_strip.html
 light:
-  - platform: neopixelbus
-    type: GRB
-    variant: SK6812
+  - platform: esp32_rmt_led_strip
+    rgb_order: GRB
+    chipset: SK6812
     pin: ${light_pin}
     num_leds: 1
+    rmt_channel: 0
     id: atom_light
     restore_mode: RESTORE_DEFAULT_OFF
-    name: "${friendly_name} Light"
+    name: "${friendly_name} Atom Light"
     effects:
       - random:
       - flicker:
