Fixed up logging too

--- a/albionboxes/prod_hallway_bedroom_fan_switches.yaml
+++ b/albionboxes/prod_hallway_bedroom_fan_switches.yaml
@@ -9,6 +9,7 @@ substitutions:
 
 packages:
   esphome: !include common/default_esphome.yaml
+  logging: !include common/default_logger.yaml
   wifi: !include common/wifi.yaml
   esp32: !include common/m5atom_device.yaml
   light: !include { file: common/atom_light.yaml, vars: { light_pin: 27 } }
