--- a/albionboxes/prod_alert_reset_button.yaml
+++ b/albionboxes/prod_alert_reset_button.yaml
@@ -7,6 +7,7 @@ substitutions:
 
 packages:
   esphome: !include common/default_esphome.yaml
+  logging: !include common/s3_logger.yaml
   wifi: !include common/wifi.yaml
   esp32: !include common/m5atoms3lite_device.yaml
   reset_button: !include common/reset_button.yaml
