--- a/albionboxes/prod_pantry_volume_dial.yaml
+++ b/albionboxes/prod_pantry_volume_dial.yaml
@@ -12,6 +12,7 @@ substitutions:
 packages:
   wifi: !include common/wifi.yaml
   esp32: !include common/m5atoms3lite_device.yaml
+  logging: !include common/s3_logger.yaml
   networking: !include common/networking.yaml
   http: !include common/http.yaml
   version: !include common/version.yaml
